# cyclopy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  a.py  circular_imports.opam  cyclopy.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: circular_imports.dune-package  circular_imports.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: analyzer.ml  circular_imports.cma  circular_imports.cmxa  circular_imports.cmxs  circular_imports.ml-gen
_build/default/lib/.circular_imports.objs/: circular_imports__Analyzer.impl.d  (+1 more)
config/: excluded_dirs.sexp
data/fixtures/: b.py  main.py
data/fixtures/nested/: __init__.py  e.py
data/fixtures/test_basic/: c.py
data/fixtures/test_from_import_module/: __main__.py
data/fixtures/test_from_import_module_and_package/: __main__.py
data/fixtures/test_from_import_object/: __main__.py
data/fixtures/test_from_import_package/: __main__.py
data/fixtures/test_from_import_packages/: __main__.py
data/fixtures/test_import_module/: __main__.py
dune.lock/: angstrom-lwt-unix.pkg  base.pkg  base_bigstring.pkg  base_quickcheck.pkg  bin_prot.pkg  conf-autoconf.pkg  core.pkg  core_kernel.pkg  core_unix.pkg  dap.pkg  earlybird.pkg  expect_test_helpers_core.pkg  fieldslib.pkg  int_repr.pkg  iter.pkg  jane-street-headers.pkg  jst-config.pkg  lock.dune  ocaml-base-compiler.pkg  ocaml.pkg  ocaml_intrinsics.pkg  parsexp.pkg  path_glob.pkg  ppx_assert.pkg  ppx_base.pkg  ppx_bench.pkg  ppx_bin_prot.pkg  ppx_cold.pkg  ppx_compare.pkg  ppx_custom_printf.pkg  ppx_disable_unused_warnings.pkg  ppx_enumerate.pkg  ppx_expect.pkg  ppx_fields_conv.pkg  ppx_fixed_literal.pkg  ppx_globalize.pkg  ppx_hash.pkg  ppx_here.pkg  ppx_ignore_instrumentation.pkg  ppx_inline_test.pkg  (+27 more)
lib/: analyzer.ml  analyzer.mli  argparser.ml  argparser.mli  cycles.ml  cycles.mli  dune  import.ml  import.mli  import_graph.ml  logger.ml  module_imports.ml  module_imports.mli  parser.ml  parser.mli  project_imports.ml  project_imports.mli
test/: dune  dune_old  test_analyzer.ml  test_circular_imports.ml  test_module_imports.ml
test_circular/: a.py  b.py  c.py  module_a.py  module_b.py  module_c.py
(+24 files in other folders)
